--- a/static/main.css
+++ b/static/main.css
@@ -3,65 +3,177 @@
 }
 
 body {
-  background-color: #1c427b;
+  background-color: #dde8f2;
 }
 
-h1, h2 {
-  margin: 0;
+body, input, select, textarea {
+  font-family: 'Helvetica-Light', 'Helvetica Light', 'Helvetica';
+  font-weight: 200;
+  font-size: 18px;
 }
 
-.form {
-  width: 800px;
-  padding: 20px 50px;
-  margin: auto;
-  margin-top: 200px;
-  background-color: whitesmoke;
-  display: flex;
-  flex-direction: column;
+input, select {
+  padding: 5px;
 }
 
-.form > label, .form > div, .form > fieldset {
-  margin-top: 10px;
-}
-
-.side-by-side-controls {
-  display: flex;
-}
-
-.side-by-side-controls > label {
-  display: flex;
-  flex-direction: column;
-  margin-left: 5px;
-}
-
-.side-by-side-controls > button {
-  margin-left: 50px;
-  height: 24px;
-  margin-top: auto;
-}
-
-.side-by-side-controls > label:first-child {
-  flex-grow: 1;
-  margin-left: 0;
-}
-
-.simple-label {
-  display: flex;
-  flex-direction: column;
-}
-
-#description {
-  height: 200px;
-}
-
-fieldset {
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background-color: white;
 }
 
-legend {
-  background: linear-gradient(0deg, white, whitesmoke);
+.form {
+  width: 937px;
+  margin: auto;
+  background-color: white;
+}
+
+.header {
+  height: 175px;
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  background-color: #5b77a0;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+.content {
+  padding: 65px;
+}
+
+.content > * {
+  margin-top: 20px;
+}
+
+.content > *:first-child {
+  margin-top: 0;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  color: #6897C6;
+}
+
+label input, label select {
+  margin-top: 5px;
+}
+
+.half-size {
+  display: flex;
+  align-items: stretch;
+}
+
+.half-size > * {
+  flex-grow: 1;
+}
+
+.half-size > *:first-child {
+  margin-right: 5px;
+}
+
+.description-container {
+  color: #6897C6;
+}
+
+.description-container label {
+  display: inline-block;
+}
+
+.type-container, .type-container label {
+  margin-left: 20px;
+}
+
+#description {
+  width: 100%;
+  height: 200px;
+  margin-top: 5px;
+}
+
+.screenshot-container {
+  display: none;
+}
+
+.submit-button {
+  flex-grow: 0;
+  height: 34px;
+  margin-top: auto;
+  width: 139px;
+  background-color: #5b77a0;
+  border: none;
+  color: white;
+  font-size: 18px;
+  margin-left: 70px;
+}
+
+.thank-container {
+  margin-top: 300px;
+}
+
+.prize-container {
+  margin-top: 100px;
+}
+
+.thank-container, .prize-container {
+  display: flex;
+  color: #5b77a0;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thank-container h1, .prize-container h1 {
+  margin-bottom: 20px;
+}
+
+.thank-container .half-size, .prize-container .half-size {
+  margin-top: 40px;
+}
+
+.thank-container a, .prize-container a {
+  color: white;
+  font-size: 18px;
+  padding: 10px 20px;
+  background-color: #5b77a0;
+  border-radius: 2px;
+  text-decoration: none;
+  margin-left: 0;
+}
+
+.thank-container a:first-child, .prize-container a:first-child {
+  margin-right: 15px
+}
+
+.donut-selector {
+  display: flex;
+  margin-top: 100px;
+  margin-bottom: 40px;
+}
+
+.donut-selector label {
+  align-items: center;
+  margin-left: 45px;
+}
+
+.donut-selector label:first-child {
+  margin-left: 0;
 }
 
 img {
-  padding: 10px;
+  width: 130px;
+  height: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.cort {
+  margin-top: 50px;
+  height: 400px;
+  width: auto;
 }
